--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Validation -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>
+
 
         <!-- jjwt-api -->
         <dependency>
