--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,9 +13,9 @@ spring:
   # DataSource
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/finance
+    url: jdbc:postgresql://postgres:5432/finance
     username: postgres
-    password: root123
+    password: postgres
 
   # PORT
 server:
