--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,18 +8,18 @@ services:
     depends_on:
       - postgres
     environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/finance
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: root123
+      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/<database_name>
+      SPRING_DATASOURCE_USERNAME: <your_username>
+      SPRING_DATASOURCE_PASSWORD: <your_password>
 
   postgres:
     image: postgres:15
     container_name: financial-product-db
     restart: on-failure
     environment:
-      POSTGRES_DB: finance
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: <database_name>
+      POSTGRES_USER: <your_username>
+      POSTGRES_PASSWORD: <your_password>
     ports:
       - "5432:5432"
     volumes:
