--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,9 +13,9 @@ spring:
   # DataSource
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://postgres:5432/finance
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://postgres:5432/<database_name>
+    username: <your_username>
+    password: <your_password>
 
   # PORT
 server:
